<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>diagnostics</name>
  <version>0.0.0</version>
  <description>
    A Metapackage for ROS 2 controller for broadcasting diagnostic data from hardware state interfaces.
  </description>
  <maintainer email="jonasz.mularski@gmail.com">Jonasz Mularski</maintainer>
  <maintainer email="bartlomiejk@vp.pl">Bartłomiej Krajewski</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- All packages -->
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>diagnostic_broadcaster</exec_depend>
  <exec_depend>terrain_model</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
